--- a/FAQ.html
+++ b/FAQ.html
@@ -39,7 +39,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="faq.html">FAQ</a></li> 
+                <li><a href="FAQ.html".html">FAQ</a></li> 
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
