--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
             <div class="video-container">
           </div>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum nibh nec feugiat feugiat. Proin pretium eros id sapien eleifend ultrices. Sed ac urna vel turpis vestibulum tincidunt nec a nisl. Nulla vestibulum leo eget magna fringilla eleifend.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                <img src="https://ibb.co/sCD6Lhm" width="600" height="600"/>
+                Sed fermentum nibh nec feugiat feugiat. Proin pretium eros id sapien eleifend ultrices. Sed ac urna vel turpis vestibulum tincidunt nec a nisl. Nulla vestibulum leo eget magna fringilla eleifend.
             </p>
         </div>
         <section class="main-content">
