--- a/index.html
+++ b/index.html
@@ -181,9 +181,7 @@
             <div class="video-container">
           </div>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                <img src="https://ibb.co/sCD6Lhm" width="600" height="600"/>
-                Sed fermentum nibh nec feugiat feugiat. Proin pretium eros id sapien eleifend ultrices. Sed ac urna vel turpis vestibulum tincidunt nec a nisl. Nulla vestibulum leo eget magna fringilla eleifend.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum nibh nec feugiat feugiat. Proin pretium eros id sapien eleifend ultrices. Sed ac urna vel turpis vestibulum tincidunt nec a nisl. Nulla vestibulum leo eget magna fringilla eleifend.
             </p>
         </div>
         <section class="main-content">
@@ -194,7 +192,7 @@
         <iframe data-tally-src="https://tally.so/embed/n9WkxG?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="971" frameborder="0" marginheight="0" marginwidth="0" title="Carbon Surfing Calculator "></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
 
         <img-comparison-slider>
-  <img slot="first" src="https://ibb.co/sCD6Lhm" width="600" height="600"/>
+  <img slot="first" src="Trees.jpg" width="600" height="600"/>
   <img slot="second" src="Surfboards.jpg" width="600" height="600"/>
 </img-comparison-slider>
 <script
